# Anarcrypt-eco-subsystem

./: .dockerrc  .gitattributes  .gitignore  .gitmodules  .gitmodules.save  Cargo.toml  Dockerfile  README.Docker.md  README.md  SimpleStorage.sol  anarcrypt.code-workspace  com.visualstudio.code.tunnel.plist  docker-compose.yaml  package-lock.json
Anarkctypt/: Anarkctypt.code-workspace  Anarkctypt.sqlproj
Anarkctypt/Anarchsun/: Anarchsun.sqlproj
Metaverse-Developement/Crypto/ChaöS-Token/: Cargo.toml  index.mjs
Metaverse-Developement/Crypto/ChaöS-Token/hello_world/: Cargo.lock.update  Cargo.toml
Metaverse-Developement/Crypto/ChaöS-Token/hello_world/src/: lib.rs
Metaverse-Developement/Crypto/ChaöS-Token/hello_world/test-ledger/: genesis.tar.bz2  snapshot-8802-Eo2yYG8u3pbPtjDn6m9uH3ZwZzziQCRgVoiPuTAPjCML.tar.zst  snapshot-8902-HqVe14Tu3TP7DzrhHGRCa5qRG9wVxYsNFR3JfWqsi6tx.tar.zst
Metaverse-Developement/Crypto/ChaöS-Token/hello_world/test-ledger/accounts/run/: 0.4  4163.3  4488.1  5103.5  5888.0  8061.7  8560.6  8802.8  8902.2
Metaverse-Developement/Crypto/ChaöS-Token/hello_world/test-ledger/rocksdb/: IDENTITY  LOG  LOG.old.1722988418446809  LOG.old.1723005038067794  LOG.old.1723005241906999  LOG.old.1723009582150268  MANIFEST-000191
Metaverse-Developement/Crypto/ChaöS-Token/src/: main  main.rs
Metaverse-Developement/Crypto/ChaöS-Token/test-ledger/: genesis.tar.bz2  snapshot-9200-3WHt4MaUAS9XrD4SRXD5sXEibFATzS23thk57XBkd3JK.tar.zst  snapshot-9300-FsXaDUkH6rxAUJY641BqFz4Z7CCP5Xujp5QWM1wDG4qa.tar.zst
Metaverse-Developement/Crypto/ChaöS-Token/test-ledger/accounts/run/: 8700.90  8800.91  8900.92  9000.93  9100.94
Metaverse-Developement/Crypto/ChaöS-Token/test-ledger/accounts/snapshot/9300/: 0.1  9200.95  9300.96
Metaverse-Developement/Crypto/ChaöS-Token/test-ledger/rocksdb/: IDENTITY  LOG  LOG.old.1723009951666195  MANIFEST-000062
Metaverse-Developement/Crypto/ChaöS-Token/test-ledger/snapshot/9300/: 9300  status_cache
Metaverse-Developement/Crypto/ChaöS-Token/test-ledger/snapshot/9300/accounts_hardlinks/: account_path_0
Metaverse-Developement/nextjs-image-gallery/: .env.local.example  pnpm-lock.yaml
anarco-program/: Cargo.toml
anarco_program/src/: lib.rs
anarcrypt/: SUMMARY.md
anarcrypt/readme/: test-snippet.md
images/AnarCoin/: AnArKi copie2.psd
images/AnarCoin/AnArKi/: AnArKi-Rond.psd  AnArKi-gif.psd  AnArKi.psd  anarcoin-dextools-banner.psd  Ä-GeN.psd
images/khaos-magic/: Chaos.0psd.psd
images/memes/: IMG_0230.GIF.REMOVED.git-id
my-solana-program/: Cargo.toml
