[package]
name = "anarcrypt-eco-subsystem"
version = "0.1.0"
authors = ["Justin AnarchSun<AnarCoin.Collective@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "anarcrypt-tokens",  # Path to your tokens submodule
    ]

[dependencies]
anchor = "0.0.1"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
solana-cli = "2.1.1"
solana-sdk = "2.1.1"
spl-token = "7.0.0"
tokio = "1.41.1"
wasm-bindgen = "0.2.95"
wasmer = "5.0.1"
 
 [dependencies.blake3]
version = "1.5.4"
features = ["std"]



[lib]
path = "src/lib.rs"  # This is the library target name
crate-type = ["lib"]  # Specify that this is a library crate
