[package]
name = "Anarcrypt_eco_subsystem"
version = "0.1.0"
authors = ["Justin AnarchSun <AnarCoin.Collective@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "anarcrypt-tokens",
    "anarco-program",  # Add other submodule paths here
    # No need to list the root package, as it's implied
]

[dependencies]
ed25519-dalek = "2.1.1"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
solana-cli = "2.1.1"
solana-sdk = "2.1.1"
spl-token = "7.0.0"
tokio = "1.41.1"
wasm-bindgen = "0.2.95"
wasmer = "5.0.1"

