[package]
name = "anarcrypt_eco_subsystem"
version = "0.1.0"
authors = ["Justin AnarchSun <AnarCoin.Collective@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "anarcrypt-tokens",
    "anarco-program",
    "agave",
    "solana_cookbook",
      # Add other submodule paths here
    # No need to list the root package, as it's implied
]

[dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
solana-cli = "2.1.1"
solana-sdk = "2.1.1"
spl-token = "7.0.0"
tokio = "1.41.1"
wasm-bindgen = "0.2.95"
wasmer = "5.0.1"
zip = "2.2.0"

[lib]
name = "anarcrypt_eco_subsystem"
path = "src/lib.rs"